src/objects/Contract_Type_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a matrix of Contract Type selections based on Service Territory and Bill Method
Defining Below As Name field Length is limited to 40
CT1 - Small Stable Contract - Evergreen
CT2 - Small Stable Contract - MTM Renewal
CT3 - Large Stable Contract
CT4 - Large Stable PT-C Contract
CT5 - Hybrid
CT6 - Block and Index</description>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <label>Contract Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contract_Type__c</fullName>
        <label>New Contract Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Type Setting</label>
</CustomObject>